// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an expense list without items 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
        No Items
      </span>
    </div>
  </div>
</div>
`;

exports[`should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={999}
      createdAt={0}
      description="orange"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={555}
      createdAt={-345600000}
      description="banana"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={1111}
      createdAt={345600000}
      description="banana"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
